--- a/www/add-company.html
+++ b/www/add-company.html
@@ -47,7 +47,7 @@
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="#" title="" class="text bold">Барахолка</a></li>
+          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
@@ -154,7 +154,7 @@
                   </div>
                   <div class="droplist" hidden>
                     <input type="text" name="district" id="district" value="" hidden>
-                    <span class="droplist-current text bold tab-input">Выбрать модель</span>
+                    <span class="droplist-current text bold tab-input">Выбрать район</span>
                     <ul class="droplist-block">
                       <li class="droplist-item text">Ilion</li>
                       <li class="droplist-item text">Petroupoli</li>
