--- a/www/community.html
+++ b/www/community.html
@@ -47,7 +47,7 @@
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="#" title="" class="text bold">Барахолка</a></li>
+          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
@@ -242,8 +242,8 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <p class="text bold">Всего сообществ: <span class="all-community">256</span></p>
-                <a href="#" class="text bold">Новых сообществ: <span class="new-company">12</span></a>
+                <p class="text bold"><span class="all-community">256</span> сообществ</p>
+                <p><a href="#" class="text bold"><span class="new-company">12</span> новых</a></p>
                 <div class="b-filter__switch">
                   <a href="#" class="b-filter__switch-item text bold">Авто</a>
                   <a href="#" class="b-filter__switch-item text bold">Мото</a>
