--- a/www/company.html
+++ b/www/company.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
     <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-aside-filter.css">
     <link rel="stylesheet" type="text/css" href="css/styles-company.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -47,7 +48,7 @@
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="#" title="" class="text bold">Барахолка</a></li>
+          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
@@ -110,68 +111,68 @@
 
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/1.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/2.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                    <div class="b-company__item item">
                       <img src="/img/temp/auto/3.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/4.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/5.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/6.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/7.png" alt="">
-                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/8.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/9.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/1.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/2.png" alt="">
-                      <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
+                      <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a>
                       </p>
@@ -199,10 +200,10 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <p class="text bold">Всего компаний: <span class="all-company">256</span></p>
-                <a href="#" class="text bold">Новых компаний: <span class="new-company">12</span></a>
+                <p class="text bold"><span class="all-company">256</span> компаний</p>
+                <p class="text bold"><a href="#">12</span> новых</a>
                 <form class="b-filter__form" name="filter">
-                  <div class="b-add-car__form-item droplist">
+                  <div class="b-filter__form-item droplist">
                     <input type="text" id="sector" value="all" hidden>
                     <span class="droplist-current text bold tab-input">Выбрать отрасль</span>
                     <ul class="droplist-block">
@@ -211,7 +212,7 @@
                       <li class="droplist-item text">Шиномонтаж</li>
                     </ul>
                   </div>
-                  <div class="b-add-car__form-item droplist">
+                  <div class="b-filter__form-item droplist">
                     <input type="text" id="city" value="all" hidden>
                     <span class="droplist-current text bold tab-input">Все города</span>
                     <ul class="droplist-block">
@@ -248,7 +249,7 @@
                       <li class="droplist-item text">Paris</li>
                     </ul>
                   </div>
-                  <div class="b-add-car__form-item droplist">
+                  <div class="b-filter__form-item droplist">
                     <input type="text" id="driver" value="all" hidden>
                     <span class="droplist-current text bold tab-input">Все районы</span>
                     <ul class="droplist-block">
@@ -281,7 +282,7 @@
             </div>
             
             <div class="block b-add-company">
-              <div class="b-add-company_wrapp">
+              <div class="b-add-company__wrapp">
                 <h5>Вы развивающася компания, стремящаяся стать ближе к своим клиентам, тогда присоединяйтесь к нашему сообществу!</h5>
                 <a href="add-company.html" title="" class="button middle add-button">Присоединиться</a>
               </div>
