--- a/www/edit-my-profile.html
+++ b/www/edit-my-profile.html
@@ -48,7 +48,7 @@
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
-          <li><a href="#" title="" class="text bold">Барахолка</a></li>
+          <li><a href="flea-market.html" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
