--- a/www/index.html
+++ b/www/index.html
@@ -43,8 +43,11 @@
       <a href="community.html" title="">Community page HTML</a><br />
       <!-- <a href="my-blog.html" title="">My blog page HTML</a><br /> -->
       <a href="add-blog.html" title="">ADD blog page HTML</a><br />
-      <a href="company.html" title="">Company page HTML</a><br />
+      <a href="company.html" title="">Companys page HTML</a><br />
       <a href="add-company.html" title="">Add company page HTML</a><br />
+      <a href="one-company-page.html" title="">One company page HTML</a><br />
+      <a href="flea-market.html" title="">Flea market page HTML</a><br />
+      <a href="one-ad-page.html" title="">One ad page HTML</a><br />
       <!-- <a href="testdrive.html" title="">Testdrive page HTML</a><br /> -->
 
   </body>
