--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -23,9 +23,8 @@
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
-    <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css"> 
-    <link rel="stylesheet" type="text/css" href="css/styles-add-blog.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-one-company.css">
+     <link rel="stylesheet" type="text/css" href="css/styles-aside-block-author.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -38,6 +37,7 @@
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
   <body>
+
 
     <header class="l-menu">
       <nav class="b-menu__wrapp wrapper row row-center">
@@ -98,83 +98,67 @@
       <!-- /Header -->
 
         <div class="row">
-          <section class="l-add-blog col xs-12">
-            <div class="block b-add-blog">
-              <div class="b-main-title">
-                <h3>Добавить запись в блоге</h3>
+          <section class="l-one-company col xs-9">
+            <div class="block b-one-company">
+              <h3>Company name</h3>
+              <p class="b-one-company__sector text">Сфера деятельности: <a href="#" title="Sector">Мойки</a></p>
+              <p class="b-one-company__rating text">Рейтинг: <span>2</span></p>
+              <img src="" alt="" class="b-one-company__rating-viewport" id="galleryPhoto">
+              <div class="b-one-company__img-block">
+                <img src="/img/temp/56738aes-480.jpg" alt="" class="b-one-company__img-item galleryThumb">
+                <img src="/img/temp/c1c36aes-960.jpg" alt="" class="b-one-company__img-item galleryThumb">
+                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-company__img-item galleryThumb">
+                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-company__img-item galleryThumb">
+                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-company__img-item galleryThumb">
+                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-company__img-item galleryThumb">
               </div>
-              <form role="form" action="/user/addpost" method="POST" enctype="multipart/form-data" class="b-add-blog__form" name="add-blog">
+              <p class="b-one-company__about text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minus impedit provident, ipsa vitae consequuntur neque quo eum autem veniam! Blanditiis, nesciunt! Suscipit porro maxime magnam blanditiis, nam maiores delectus.</p>
+              <p class="b-one-company__contact m-one-company__contact_address text">Address: <span>Sokratous 46, Athina 104 31, Greece</span></p>
+              <p class="b-one-company__contact m-one-company__contact_telephone text">Telephone: <a href="tel:+302105241296">+30 21 0524 1296</span></p>
+              <p class="b-one-company__contact m-one-company__contact_email text">Email: <a href="mailto:email@email.com?subject=feedback">email@email.com</a></p>
 
-              <div class="b-add-blog__form-item m-form-item-inline text">
-                <p class="b-form-item-title"><label for="title" class="text">Название поста</label></p>
-                <p><input type="text" id="title" name="title" class="tab-input"></p>
-              </div>
-
-              <div class="b-add-blog__form-item m-form-item-inline">
-                <span class="b-form-item-title text bold">Тэг</span>
-                <div class="droplist">
-                  <input type="text" id="tag" name="tag" value="" hidden>
-                  <span class="droplist-current text bold tab-input">Выбрать</span>
-                  <ul class="droplist-block">
-                    <li class="droplist-item text">Личное</li>
-                    <li class="droplist-item text">Хобби</li>
-                    <li class="droplist-item text">Путешествия</li>
-                  </ul>
+              <form action="one-company-page_submit" method="get" accept-charset="utf-8" class="b-one-company__form">
+                <h4>Написать сообщение</h4>
+                <div class="b-form-item m-form-item_textarea m-form-item-inline">
+                  <p class="b-form-item-title text bold"><label>Введите текст сообщения </label></p>
+                  <p><textarea rows="4" cols="60" name="hobby" class="text tab-input"></textarea></p>
                 </div>
-              </div>
-
-               <div class="b-add-blog__form-item m-form-item-inline">
-                <p class="b-form-item-title"><label for="title" class="text">Фото обложки</label></p>
-                <div id="postMainPhotoSlim"
-                  data-label="Drop photo here"
-                  data-size="800,400"
-                  data-ratio="2:1"
-                  class="b-form-item-add-photo text">
-                  <input type="file" name="mainphoto" required />
-                </div>
-              </div>
-
-              <div class="b-add-blog__form-item m-form-item_textarea m-form-item-inline">
-                <p class="b-form-item-title text bold"><label>Краткое описание поста</label></p>
-                <p><textarea rows="4" cols="50" name="aboutme" class="text tab-input"></textarea></p>
-              </div>
-
-              <div id="postText" class="b-add-blog__form-item m-form-item_textarea m-form-item-inline" style="display: none;">
-                <p class="b-form-item-title text bold"><label>Текст поста</label></p>
-                 <p><textarea rows="6" cols="74" name="" class="text tab-input"></textarea></p>
-                <button type="button" class="b-form-item-button">Удалить блок</button>
-              </div>
-
-              <div id="postPhoto" style="display: none;">
-                <div class="b-add-blog__form-item m-form-item-inline">
-                  <p class="b-form-item-title"><label for="title" class="text">Добавить фото</label></p>
-                  <div class="postPhotoSlim b-form-item-add-photo text" 
-                    data-label="Drop photo here"
-                    data-size="600,300"
-                    data-ratio="2:1">
-                    <input type="file" name="slim[]" />
-                  </div>
-                  <button type="button" class="b-form-item-button">Удалить фото</button>
-                </div>
-              </div>
-              
-              <div id="postContent"></div>
-
-              <div class="b-add__form-button">
-                <button type="button" id="addPostText" class="button middle">Добавить текст</button>
-                <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
-              </div>
-
-
-                <input type="submit" value="Опубликовать" class="button middle tab-input"></input>
-
+                <input type="submit" value="Опубликовать" class="submit-button big button middle tab-input"></input>
               </form>
             </div>
           </section>
+
+          <section class="l-similar col xs-3">
+            <div class="block b-similar">
+              <p class="text bold"><span>100</span> похожих компаний</p>
+              <div class="b-similar__wrapp">
+                <div class="b-similar__item">
+                  <img src="/img/temp/img-previous-2.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text">Name company 1</a>
+                </div>
+                <div class="b-similar__item">
+                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text">Name company 2</a>
+                </div>
+                <div class="b-similar__item">
+                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text">Name company 2</a>
+                </div>
+                <div class="b-similar__item">
+                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text">Name company 2</a>
+                </div>
+                <div class="b-similar__item">
+                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <a href="#" class="text">Name company 2</a>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
+
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
-      <script type="text/javascript" src="js/script-droplist.js"></script>
-      <script type="text/javascript" src="js/script-add-blog.js"></script>
+      <script type="text/javascript" src="js/script-one-company.js"></script>
 <!-- Footer -->
       </div>
     </main>
