Страница компаний переверстана

--- a/www/add-company.html
+++ b/www/add-company.html
@@ -33,7 +33,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -66,7 +65,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -115,10 +114,10 @@
                 <div class="b-add-company__form-item m-form-item-inline">
                   <p class="b-form-item-title text bold"><label>Логотип компании</label></p>
                   <div id="postMainPhotoSlim"
-                    data-label="Drop photo here"
-                    data-size="800,400"
-                    data-ratio="2:1"
-                    class="b-form-item-add-photo text slim">
+                    data-label="Drop logo here"
+                    data-size="400,400"
+                    data-ratio="1:1"
+                    class="text slim">
                     <input type="file" name="mainphoto" required />
                   </div>
                 </div>
@@ -203,7 +202,7 @@
                   <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
                 </div>
 
-                <input type="submit" value="Опубликовать" class="button middle tab-input"></input>
+                <input type="submit" value="Опубликовать" class="button submit-button big tab-input"></input>
               </form>
 
             </div>
