--- a/www/add-my-car.html
+++ b/www/add-my-car.html
@@ -33,7 +33,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -66,7 +65,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -301,7 +300,7 @@
                 </div>
               </div>
 
-              <input type="submit" value="Сохранить" <="" input="" class="button middle tab-input">
+              <input type="submit" value="Сохранить" <="" input="" class="button submit-button big tab-input">
               
             </form>
 
@@ -312,7 +311,7 @@
             <div class="block b-author">
               <div class="b-author__wrapp">
 
-                <img src="/img/temp/author/author-1.jpg" alt="" class="b-author__wrapp-photo">
+                <img src="img/temp/author/author-1.jpg" alt="" class="b-author__wrapp-photo">
                 <p class="b-author__wrapp-name text bold">Leonidis Castonedis</p>
                 <p class="b-author__wrapp-city text">Athens</p>
 
