--- a/www/main.html
+++ b/www/main.html
@@ -32,9 +32,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="js/script-droplist.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
   <body>
@@ -65,7 +66,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav" style="display: none;">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -121,11 +122,11 @@
                 <h3>Лидер голосования</h3>
                 
                 <article class="b-content__lider-article">
-                  <img src="/img/temp/c1c36aes-960.jpg" alt="" class="b-content__lider-article-img">
+                  <img src="img/temp/c1c36aes-960.jpg" alt="" class="b-content__lider-article-img">
                   <div class="b-content__lider-article-vote"><span>225 голосов</span></div>
                   <h4>My old-school bulltet proof E-Klasse </h4>
                   <div class="b-content__lider-article-author">
-                    <img src="/img/temp/author/author-1.jpg" alt="" class="b-content__lider-article-author-photo">
+                    <img src="img/temp/author/author-1.jpg" alt="" class="b-content__lider-article-author-photo">
                     <span class="b-content__lider-article-author-name text">Leonidis Castonedis</span><span class="b-content__lider-article-author-city text">Athens</span>
                   </div>
                   <p class="b-content__lider-article-text text">Реальность всё расставляет на свои места. Машины, которые в статьях и обзорах ругали — сплошь и рядом встречаются на дорогах. А те, которые хвалили — редкость. Просто любой автомобиль может стать очень хорошим. Потому что он стал вашим. Ведь как бывает, придёшь в магазин, а там в линию выстроились штук пятнадцать телевизоров.</p>
@@ -137,10 +138,10 @@
                   <p><a href="#" class="text bold">Предидущие победители</a></p>
                   <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-previous-item">
-                      <img src="/img/temp/img-previous-1.jpg" alt="">
+                      <img src="img/temp/img-previous-1.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-previous-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -149,15 +150,15 @@
                   <p><a href="#" class="text bold">Набирают популярность</a></p>
                    <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="/img/temp/img-previous-1.jpg" alt="">
+                      <img src="img/temp/img-previous-1.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a><a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="/img/temp/e5ac4aes-480.jpg" alt="">
+                      <img src="img/temp/e5ac4aes-480.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-gaining-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -166,28 +167,28 @@
                   <p><a href="#" class="text bold">Продвигаемые проекты</a></p>
                   <div class="b-content__container">
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-1.jpg" alt="">
+                      <img src="img/temp/img-previous-1.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-1.jpg" alt="">
+                      <img src="img/temp/img-previous-1.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-1.jpg" alt="">
+                      <img src="img/temp/img-previous-1.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                     <a href="#" title="" class="b-content__lider-promote-item">
-                      <img src="/img/temp/img-previous-2.jpg" alt="">
+                      <img src="img/temp/img-previous-2.jpg" alt="">
                     </a>
                   </div>
                 </div>
@@ -212,32 +213,32 @@
                 <div class="b-news__container">
 
                   <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="/img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_news-market" data-name="Новости рынка">
-                    <img src="/img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_company" data-name="Новости рынка">
-                    <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text"><span>XASTOMTUNING:</span> Наш опыт восстановления  по оригинальным чертежам</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_news-market" data-name="Новости рынка">
-                    <img src="/img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="/img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_blog" data-name="Блоги">
-                    <img src="/img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
+                    <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
                     <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
@@ -305,112 +306,112 @@
                   <div class="b-new-auto__container container">
 
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/3.png" alt="">
+                      <img src="img/temp/auto/3.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/4.png" alt="">
+                      <img src="img/temp/auto/4.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/5.png" alt="">
+                      <img src="img/temp/auto/5.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/6.png" alt="">
+                      <img src="img/temp/auto/6.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/7.png" alt="">
+                      <img src="img/temp/auto/7.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/8.png" alt="">
+                      <img src="img/temp/auto/8.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/9.png" alt="">
+                      <img src="img/temp/auto/9.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/3.png" alt="">
+                      <img src="img/temp/auto/3.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/4.png" alt="">
+                      <img src="img/temp/auto/4.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/5.png" alt="">
+                      <img src="img/temp/auto/5.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/6.png" alt="">
+                      <img src="img/temp/auto/6.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/7.png" alt="">
+                      <img src="img/temp/auto/7.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/8.png" alt="">
+                      <img src="img/temp/auto/8.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/9.png" alt="">
+                      <img src="img/temp/auto/9.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/3.png" alt="">
+                      <img src="img/temp/auto/3.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
                     <a href="#" title="" class="b-new-auto__item item">
-                      <img src="/img/temp/auto/4.png" alt="">
+                      <img src="img/temp/auto/4.png" alt="">
                       <p class="b-new-auto__item-name">Alexis.Sanches</p>
                       <p class="b-new-auto__item-auto">Audi Q7 Quattttttrooo!</p>
                     </a>
