--- a/www/my-page.html
+++ b/www/my-page.html
@@ -31,7 +31,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -65,7 +64,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -118,7 +117,7 @@
                 
                 <ul class="b-title__content-list">
                 
-                  <li><a href="#" alt="lexus" style="background-image: url('/img/temp/logo-auto/lexus.png');"></a></li>
+                  <li><a href="#" alt="lexus" style="background-image: url('img/temp/logo-auto/lexus.png');"></a></li>
                   <li class="b-title__content-list-buy" data-text="куплена">2016</li>
                   <li class="b-title__content-list-relese" data-text="год выпуска">2012</li>
                   <li class="b-title__content-list-power" data-text="л.с.">215</li>
@@ -135,7 +134,7 @@
               <a href="edit-my-profile.html" class="block-redactor text subtext">Редактировать</a>
               <div class="b-author__wrapp">
 
-                <img src="/img/temp/author/author-1.jpg" alt="" class="b-author__wrapp-photo">
+                <img src="img/temp/author/author-1.jpg" alt="" class="b-author__wrapp-photo">
                 <p class="b-author__wrapp-name text bold">Leonidis Castonedis</p>
                 <p class="b-author__wrapp-city text">Athens</p>
 
@@ -167,15 +166,15 @@
                 <h3>Мои авто</h3>
                 <a href="add-my-car.html" class="button small">Добавить</a>
                 <div class="b-author__car-item">
-                  <img src="/img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/2.png" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
                 <div class="b-author__car-item">
-                  <img src="/img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/2.png" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
                 <div class="b-author__car-item">
-                  <img src="/img/temp/auto/2.png" alt="">
+                  <img src="img/temp/auto/2.png" alt="">
                   <p><a href="#" class="text">Nissan Terrano 2.6L 200hp</a></p>
                 </div>
               </div>
