--- a/www/add-blog.html
+++ b/www/add-blog.html
@@ -32,9 +32,11 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="js/slim.jquery.min.js"></script>
+    <script type="text/javascript" src="js/script-droplist.js"></script>
+    <script type="text/javascript" src="js/script-droplist.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
   </head>
   <body>
@@ -65,7 +67,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -166,14 +168,12 @@
               </div>
 
 
-                <input type="submit" value="Опубликовать" class="button middle tab-input"></input>
+                <input type="submit" value="Опубликовать" class="button submit-button big tab-input"></input>
 
               </form>
             </div>
           </section>
         </div>
-      <script type="text/javascript" src="js/slim.jquery.min.js"></script>
-      <script type="text/javascript" src="js/script-droplist.js"></script>
       <script type="text/javascript" src="js/script-add-blog.js"></script>
 <!-- Footer -->
       </div>
