--- a/www/community.html
+++ b/www/community.html
@@ -33,7 +33,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -66,7 +65,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -109,7 +108,7 @@
                 <div class="b-community__container container">
 
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -120,7 +119,7 @@
                     </div>
                     
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -130,7 +129,7 @@
                       </p>
                     </div>
                    <div class="b-community__item item">
-                      <img src="/img/temp/auto/3.png" alt="">
+                      <img src="img/temp/auto/3.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -140,7 +139,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/4.png" alt="">
+                      <img src="img/temp/auto/4.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -150,7 +149,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/5.png" alt="">
+                      <img src="img/temp/auto/5.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -160,7 +159,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/6.png" alt="">
+                      <img src="img/temp/auto/6.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -170,7 +169,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/7.png" alt="">
+                      <img src="img/temp/auto/7.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -180,7 +179,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/8.png" alt="">
+                      <img src="img/temp/auto/8.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -190,7 +189,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/9.png" alt="">
+                      <img src="img/temp/auto/9.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -200,7 +199,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
@@ -210,7 +209,7 @@
                       </p>
                     </div>
                     <div class="b-community__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <p class="text">
                         <a href="#" class="b-community__item-name">Alexis.Sanches</a>
                         <span>из города</span>
