--- a/www/company.html
+++ b/www/company.html
@@ -34,7 +34,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -67,7 +67,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -110,70 +110,70 @@
                 <div class="b-company__container container">
 
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                    <div class="b-company__item item">
-                      <img src="/img/temp/auto/3.png" alt="">
+                      <img src="img/temp/auto/3.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/4.png" alt="">
+                      <img src="img/temp/auto/4.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/5.png" alt="">
+                      <img src="img/temp/auto/5.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/6.png" alt="">
+                      <img src="img/temp/auto/6.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/7.png" alt="">
+                      <img src="img/temp/auto/7.png" alt="">
                        <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/8.png" alt="">
+                      <img src="img/temp/auto/8.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/9.png" alt="">
+                      <img src="img/temp/auto/9.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/1.png" alt="">
+                      <img src="img/temp/auto/1.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
-                      <img src="/img/temp/auto/2.png" alt="">
+                      <img src="img/temp/auto/2.png" alt="">
                       <h4><a href="one-company-page.html" class="b-company__item-name">Company 1</a></h4>
-                      <a href="#" class="text b-company__item-sector">Мойки</a>
+                      <a href="#" class="text subtext b-company__item-sector">Мойки</a>
                        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a>
                       </p>
                     </div>
