--- a/www/edit-my-profile.html
+++ b/www/edit-my-profile.html
@@ -67,7 +67,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -172,7 +172,7 @@
                   <p><textarea rows="3" cols="50" name="hobby" id="hobby"></textarea></p>
                 </div>
 
-                <input type="submit" value="Сохранить" <="" input="" class="tab-input button middle">
+                <input type="submit" value="Сохранить" <="" input="" class="button submit-button big tab-input">
 
               </form>
               
