--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -34,7 +34,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -67,7 +67,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -111,7 +111,7 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -128,7 +128,7 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natmollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -145,7 +145,7 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -162,7 +162,7 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -179,7 +179,7 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -195,24 +195,7 @@
                     </div>
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
-                      <div class="b-ad__item-info">
-                        <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                        <p class="b-ad__item-info-tag text">
-                          <a href="#" class="b-ad__item-info-tag-item text subtext">Колеса</a>, 
-                          <a href="#" class="b-ad__item-info-tag-item text subtext">диски</a>, 
-                          <a href="#" class="b-ad__item-info-tag-item text subtext">фары</a>
-                        </p>
-                        <p class="b-ad__item-info-city text">Barcelona</p>
-                      </div>
-                      <div class="b-ad__item-price text">
-                        <span>200000</span> <span>$</span>
-                      </div>
-                    </div>
-
-                    <div class="b-ad__item item">
-                      <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
@@ -229,7 +212,24 @@
 
                     <div class="b-ad__item item">
                       <div class="b-ad__item-fav"></div>
-                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="/img/temp/auto/1.png" alt=""></a>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
+                      <div class="b-ad__item-info">
+                        <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                        <p class="b-ad__item-info-tag text">
+                          <a href="#" class="b-ad__item-info-tag-item text subtext">Колеса</a>, 
+                          <a href="#" class="b-ad__item-info-tag-item text subtext">диски</a>, 
+                          <a href="#" class="b-ad__item-info-tag-item text subtext">фары</a>
+                        </p>
+                        <p class="b-ad__item-info-city text">Barcelona</p>
+                      </div>
+                      <div class="b-ad__item-price text">
+                        <span>200000</span> <span>$</span>
+                      </div>
+                    </div>
+
+                    <div class="b-ad__item item">
+                      <div class="b-ad__item-fav"></div>
+                      <a href="one-ad-page.html" class="b-ad__item-img"><img src="img/temp/auto/1.png" alt=""></a>
                       <div class="b-ad__item-info">
                         <h5><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
                         <p class="b-ad__item-info-tag text">
