--- a/www/one-ad-page.html
+++ b/www/one-ad-page.html
@@ -31,7 +31,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/1.7.4/jquery.dotdotdot.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -65,7 +65,7 @@
 
       <!-- Меню пользователя -->
         <div class="b-menu__wrapp-login-nav">
-          <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
+          <img src="img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
             <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
@@ -105,12 +105,12 @@
               <h3 class="b-one-ad__price">Цена: <span>20$</span></h3>
               <img src="" alt="" class="b-one-ad__viewport" id="galleryPhoto">
               <div class="b-one-ad__img-block">
-                <img src="/img/temp/56738aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="/img/temp/c1c36aes-960.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
-                <img src="/img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/56738aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/c1c36aes-960.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
+                <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-one-ad__img-item galleryThumb">
               </div>
               <p class="b-one-ad__about text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint minus impedit provident, ipsa vitae consequuntur neque quo eum autem veniam! Blanditiis, nesciunt! Suscipit porro maxime magnam blanditiis, nam maiores delectus.</p>
               <p class="b-one-ad__contact m-one-ad__contact_telephone text">Telephone: <a href="tel:+302105241296">+30 21 0524 1296</span></p>
@@ -122,33 +122,34 @@
                   <p class="b-form-item-title text bold"><label>Введите текст сообщения </label></p>
                   <p><textarea rows="4" cols="60" name="hobby" class="text tab-input"></textarea></p>
                 </div>
+                <input type="submit" value="Опубликовать" class="button submit-button big tab-input"></input>
               </form>
             </div>
           </section>
 
           <section class="l-similar col xs-3">
             <div class="block b-similar">
-              <p class="text bold">Похожих компаний: <span>100</span></p>
-              <p class="text bold">Новых похожих компаний: <a href="#">10</a></p>
+              <p class="text bold"><span>100</span> похожих компаний</p>
+              <p class="text bold"><a href="#">10</a> новых компаний</p>
               <div class="b-similar__wrapp">
                 <div class="b-similar__item">
-                  <img src="/img/temp/img-previous-2.jpg" alt="" class="b-similar__item-img">
+                  <img src="img/temp/img-previous-2.jpg" alt="" class="b-similar__item-img">
                   <a href="#" class="text">Name company 1</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
                   <a href="#" class="text">Name company 2</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
                   <a href="#" class="text">Name company 2</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
                   <a href="#" class="text">Name company 2</a>
                 </div>
                 <div class="b-similar__item">
-                  <img src="/img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
+                  <img src="img/temp/img-previous-1.jpg" alt="" class="b-similar__item-img">
                   <a href="#" class="text">Name company 2</a>
                 </div>
               </div>
